# tauri-code-base-analyzer

./: .gitignore  AGENT_SDK_GUIDE.md  AGENT_SDK_INTEGRATION_SUMMARY.md  BACKEND_IMPLEMENTATION.md  CHAT_TEST.md  CLAUDE_AGENT_SDK_DEEP_DIVE.md  CLAUDE_CODE_SDK_IMPLEMENTATION_PLAN.md  COMPLETE_ARCHITECTURE.md  CONTINUOUS_SESSION_GUIDE.md  CONTINUOUS_SESSION_START.md  Cargo.toml  DEERAPI_INTEGRATION_GUIDE.md  EMBEDDING_IMPLEMENTATION_PLAN.md  ENHANCED_AGENT_GUIDE.md  ENRICHMENT_MIGRATION_COMPLETE.md  ENV_SETUP.md  FILE_WALKER_MIGRATION.md  FINAL_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_COMPLETED.md  MAIN_RS_CHANGES.md  MIGRATION_SUMMARY.md  PERSISTENT_CHAT_CHANGES.md  PERSISTENT_CHAT_GUIDE.md  QUICK_SETUP.md  QUICK_START.md  QUICK_START_INTERACTIVE.md  QUICK_START_REAL_SDK.md  README.md  README_ROUTER.md  REAL_AGENT_SDK_ARCHITECTURE.md  REAL_SDK_INTEGRATION_COMPLETE.md  SAVE_ENTITIES_GUIDE.md  SETUP_COMPLETE.md  SETUP_ROUTER.md  START_PERSISTENT_CHAT.md  TS_SDK_INTEGRATION.md  example_base_entity.json  package-lock.json  package.json  (+9 more)
crates/codebase-mcp-server/: Cargo.toml
crates/codebase-mcp-server/src/: main.rs
src-tauri/: .env.example  AI_CODING_AGENT.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  NATIVE_TOOL_USE.md  base_entity.json  build.rs  tauri.conf.json  test_agent.sh
src-tauri/capabilities/: default.json
src-tauri/examples/: agent_example.rs  agent_sdk_example.rs  coding_agent_example.rs  direct_chat_test.rs  enhanced_agent_example.rs  mcp_agent_example.rs  persistent_chat_test.rs  real_agent_sdk_example.rs  simple_chat_test.rs
src-tauri/src/: ARCHITECTURE.md  USAGE_EXAMPLES.md  agent_sdk_wrapper.rs  analyzer.rs  enhanced_claude_wrapper.rs  entity_analyzer.rs  lib.rs  main.rs  precise_analyzer.rs  real_agent_sdk_wrapper.rs  test.rs  ts_sdk_wrapper.rs
src-tauri/src/agent_core/: agent.rs  agent_sdk_coding_agent.rs  coding_agent.rs  enhanced_coding_agent.rs  mod.rs  prompts.rs  real_agent_sdk_coding_agent.rs  ts_agent.rs  types.rs
src-tauri/src/claude_client/: client.rs  error.rs  mod.rs  types.rs
src-tauri/src/data/: entities_after-sale-demo_20251001_130153.json  entities_after-sale-demo_20251001_130207.json  (+3 more)
src-tauri/src/tool_execution/: mod.rs  (+1 more)
(+74 files in other folders)
