[package]
name = "tauri-code-base-analyzer"
version = "0.1.0"
description = "A Tauri plugin that analyzes frontend repositories"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }

[dependencies]
tauri = { version = "2.4.1", features = [] }
tauri-plugin-fs = "2.4.2"
tauri-plugin-dialog = "2.4.0"
serde = { version = "1.0.0", features = ["derive"] }
serde_json = "1.0.0"
walkdir = "2.3"
regex = "1.5"
tokio = { version = "1.0.0", features = ["full"] }
chrono = { version = "0.4.0", features = ["serde"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
