[package]
name = "tauri-code-base-analyzer"
version = "0.1.0"
description = "A Tauri plugin that analyzes frontend repositories"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# Library configuration for examples to use
[lib]
name = "tauri_code_base_analyzer"
path = "src/lib.rs"

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }
cc = "1.0"

[dependencies]
tauri = { version = "2.4.1", features = [] }
tauri-plugin-fs = "2.4.2"
tauri-plugin-dialog = "2.4.0"
serde = { version = "1.0.0", features = ["derive"] }
serde_json = "1.0.0"
walkdir = "2.3"
regex = "1.5"
tokio = { version = "1.0.0", features = ["full"] }
futures = "0.3"
chrono = { version = "0.4.0", features = ["serde"] }
reqwest = { version = "0.11", features = ["json"] }
async-trait = "0.1"
glob = "0.3"
anyhow = "1.0"
tree-sitter = "0.22"
tree-sitter-typescript = "0.21"
tree-sitter-rust = "0.21"
lazy_static = "1.4"
dotenv = "0.15"

[features]
custom-protocol = ["tauri/custom-protocol"]
