[package]
name = "codebase-mcp-server"
version = "0.1.0"
edition = "2021"

[dependencies]
# MCP 协议
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 异步运行时
tokio = { version = "1.35", features = ["full"] }

# 错误处理
anyhow = "1.0"

# 引用主项目的代码分析模块
tauri-code-base-analyzer = { path = "../../src-tauri" }

[[bin]]
name = "codebase-mcp-server"
path = "src/main.rs"

